2018-05-27 1,新增 极验模块 2,编写 第二期数据实验室模块 3,调整 API接口 可以实现跨域

--- a/composer.json
+++ b/composer.json
@@ -6,8 +6,10 @@
     "type": "project",
     "require": {
         "php": ">=7.0.0",
+        "barryvdh/laravel-cors": "^0.11.0",
         "encore/laravel-admin": "1.5.*",
         "fideloper/proxy": "~3.3",
+        "germey/geetest": "^3.0",
         "laravel-admin-ext/api-tester": "^1.0",
         "laravel-admin-ext/config": "^1.0",
         "laravel-admin-ext/helpers": "^1.0",
